Creacion de Modelo: Opiniometro_Model en WebApp. Se creo el controller y view para Seccion.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/Index.cshtml
@@ -29,3 +29,7 @@
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
+
+<div>
+    @Html.ActionLink("Lista de Secciones de Formulario", "Index", "Seccion")<br />
+</div>
