--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/About.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/About.cshtml
@@ -1,7 +1,18 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>@ViewBag.Title</h2>
 
-<p>Use this area to provide additional information.</p>
+<!--Grupo C-->
+<div>
+    <h1>The Strategists</h1>
+    <ul>
+        <li>Daniel Ramírez - B45675</li>
+        <li>José Andrés Mejías - B54275</li>
+        <li>Allen Ramírez - B25448</li>
+        <li>Felipe Almanza - B60259</li>
+        <li>Sergio Fernández - B22539</li>
+        <li>Aldo Weil Hernández - B47741</li>
+        <li>Sebastían Vargas Soto - B47431</li>
+    </ul>
+</div>
