--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/Index.cshtml
@@ -1,20 +1,11 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Opiniometro@UCR";
 }
-
-<div class="jumbotron">
-    <h1>Bienvenido</h1>
-    
+<div class="page-header text-center">
+    <h1>¡Bienvenido!</h1>
 </div>
-
 <div class="row">
     <div class="col-md-4">
-        @Html.ActionLink("Lista de estudiantes", "Index", "Estudiante") <br />
-    </div>
-    <div class="col-md-4">
-        
-    </div>
-    <div class="col-md-4">
-        
+        <h4>@Html.ActionLink("Lista de estudiantes", "Index", "Estudiante")</h4><br />
     </div>
 </div>
