--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Estudiante/Details.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Estudiante/Details.cshtml
@@ -37,5 +37,5 @@
 </div>
 <p>
    
-    @Html.ActionLink("Back to perfil", "Perfil", new {id = @Model.Cedula_Estudiante})
+    @Html.ActionLink("Regresar a perfil", "Perfil", new {id = @Model.Cedula_Estudiante})
 </p>
