--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Estudiante/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Estudiante/Index.cshtml
@@ -4,36 +4,40 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
-
+<h2>Estudiantes</h2>
+<!--
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+-->
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Carne)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.Persona.Nombre)
         </th>
-        <th></th>
+        <th>
+            @Html.DisplayNameFor(model => model.Carne)
+        </th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Carne)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Persona.Nombre)
-        </td>
-        <td>
-            <!--Html.ActionLink("Edit", "Edit", new { id=item.Cedula_Estudiante }) |-->
-            @Html.ActionLink("Link", "Perfil", new { id = item.Cedula_Estudiante }) |
-            <!--Html.ActionLink("Delete", "Delete", new { id = item.Cedula_Estudiante })-->
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+       
+                @Html.DisplayFor(modelItem => item.Persona.Nombre).ToString() @Html.DisplayFor(modelItem => item.Persona.Apellido1).ToString()
+            </td>
+            <td>
+                @Html.ActionLink(@Html.DisplayFor(modelItem => item.Carne).ToString(), "Perfil", new { id = item.Cedula_Estudiante })
+            </td>
+            <!--
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id=item.Cedula_Estudiante })
+                @Html.ActionLink("Link", "Perfil", new { id = item.Cedula_Estudiante })
+                @Html.ActionLink("Delete", "Delete", new { id = item.Cedula_Estudiante })
+            </td>
+            -->
+        </tr>
+    }
 
 </table>
