Agregado nombre en la página About.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/About.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/About.cshtml
@@ -1,7 +1,15 @@
 ﻿@{
     ViewBag.Title = "About";
+    ViewBag.Message = "Developers information";
 }
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<h4>JJAPH Inventions</h4>
+<p>
+    Desarrollador 1<br />
+    Desarrollador 2<br />
+    Desarrollador 3<br />
+    Desarrollador 4<br />
+    Jim Douglas Zúñiga Porras
+</p>
