Cambio para que haya una pantalla principal donde se pueda comunicar con los trabajos de los equipos.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/Index.cshtml
@@ -1,11 +1,9 @@
-﻿@{
-    ViewBag.Title = "Opiniometro@UCR";
+﻿
+@{
+    ViewBag.Title = "Index";
 }
-<div class="page-header text-center">
-    <h1>¡Bienvenido!</h1>
-</div>
-<div class="row">
-    <div class="col-md-4">
-        <h4>@Html.ActionLink("Lista de estudiantes", "Index", "Estudiante")</h4><br />
-    </div>
-</div>
+
+<h1>Aplicación 0</h1>
+
+<h4><a href="/TheStrategists">TheStrategists</a></h4>
+
