Agregado nombres del equipo JJAPH a la vista About.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/About.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/About.cshtml
@@ -5,11 +5,12 @@
 <h2>@ViewBag.Title</h2>
 <h3>@ViewBag.Message</h3>
 
+<!-- Equipo A -->
 <h4>JJAPH Inventions</h4>
 <p>
-    Desarrollador 1<br />
-    Desarrollador 2<br />
-    Desarrollador 3<br />
-    Desarrollador 4<br />
-    Jim Douglas Zúñiga Porras
+    Jennifer Villalobos<br />
+    Jose Pablo Salas<br />
+    Hernán Torres<br />
+    Adrián Vargas<br />
+    Jim D. Zúñiga
 </p>
