--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/TheStrategists/Perfil.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/TheStrategists/Perfil.cshtml
@@ -26,5 +26,5 @@
 
     </div>
 
-    @Html.ActionLink("Regresar a estudiantes", "Index")
+    @Html.ActionLink("Regresar a estudiantes", "Estudiantes")
 </div>
