Arreglados errores ortográficos y de formato.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/About.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/About.cshtml
@@ -5,7 +5,7 @@
 
 <!--Grupo C-->
 <div>
-    <h1>The Strategists</h1>
+    <h4><b>The Strategists</b></h4>
     <ul>
         <li>Daniel Ramírez - B45675</li>
         <li>José Andrés Mejías - B54275</li>
