--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/TheStrategists/Estudiantes.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/TheStrategists/Estudiantes.cshtml
@@ -16,7 +16,8 @@
             @Html.DisplayNameFor(model => model.Persona.Nombre)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Carne)
+            <!--@Html.DisplayNameFor(model => model.Carne)-->
+            Carné
         </th>
     </tr>
 
