--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Seccion/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Seccion/Index.cshtml
@@ -4,6 +4,47 @@
     ViewBag.Title = "Index";
 }
 
+<style>
+/* Style the button that is used to open and close the collapsible content */
+.collapsible {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 13px; /* button height */
+    width: 100%; /* tab width */
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+}
+
+    /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+    .active, .collapsible:hover {
+        background-color: #ccc;
+    }
+
+/* Style the collapsible content. Note: hidden by default */
+.content {
+    padding: 0 18px;
+    background-color: white;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+}
+
+.collapsible:after {
+    content: '\02795'; /* Unicode character for "plus" sign (+) */
+    font-size: 10px; /* character size */
+    color: white;
+    float: right;
+    margin-left: 5px;
+}
+
+.active:after {
+    content: "\2796"; /* Unicode character for "minus" sign (-) */
+}
+</style>
+
 <h2>Secciones</h2>
 
 <p>
@@ -13,20 +54,18 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Titulo)
-            <br />
-            <small>Item 1</small>
-            <br />
-            <small>Item 2</small>
-            <br />
-            <small>Item 3</small>
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.Titulo }) |
-            @Html.ActionLink("Details", "Details", new { id = item.Titulo }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.Titulo })
+            <button class="collapsible"> @Html.DisplayFor(modelItem => item.Titulo) </button>
+            <div class="content">
+                <small>Item 1</small>
+                <br />
+                <small>Item 2</small>
+                <br />
+                <small>Item 3</small>
+            </div>
         </td>
     </tr>
 }
 
 </table>
+
+<script src="~/Scripts/CollapsibleScript.js"></script>
