--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Preguntas/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Preguntas/Index.cshtml
@@ -11,11 +11,18 @@
 </p>
 <table class="table">
     <tr>
-        <th></th>
+        <th>
+       
+            @Html.DisplayNameFor(model => model.Planteamiento)
+        
+        </th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Planteamiento)
+        </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Planteamiento }) |
             @Html.ActionLink("Details", "Details", new { id=item.Planteamiento }) |
