Se agrega link y vista de formulario.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Curso/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Curso/Index.cshtml
@@ -29,10 +29,13 @@
             @Html.DisplayFor(modelItem => item.NombreCurso)
         </td>
         <td>
-            
-            @*@Html.ActionLink("Edit", "Edit", new { id = item.CodigoCurso }) |
-            @Html.ActionLink("Details", "Details", new { id = item.CodigoCurso }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.CodigoCurso })*@
+
+            @Html.ActionLink("Formulario 1", "Formulario")  <br>
+            @Html.ActionLink("Formulario 2", "Formulario")  <br>
+            @Html.ActionLink("Formulario 3", "Formulario") 
+
+            @**@ @*@Html.ActionLink("Details", "Details", new { id = item.CodigoCurso }) |
+        @Html.ActionLink("Delete", "Delete", new { id = item.CodigoCurso })*@
         </td>
     </tr>
 }
