--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/About.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/About.cshtml
@@ -4,4 +4,10 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+@*Grupo D*@
+<p>C.X. Solutions: 
+    Franklin Ramírez
+    Jean Carlos Delgado
+    Antonio Ercolani
+    Fitzberth Powell
+    Isaac Tretta</p>
