Actualizado del Home/About para desplegar los nombres de los miembros del equipo correctamente

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/About.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/About.cshtml
@@ -5,9 +5,11 @@
 <h3>@ViewBag.Message</h3>
 
 @*Grupo D*@
-<p>C.X. Solutions: 
-    Franklin Ramírez
-    Jean Carlos Delgado
-    Antonio Ercolani
-    Fitzberth Powell
-    Isaac Tretta</p>
+<p>
+    C.X. Solutions:<br/>
+    Franklin Ramírez<br/>
+    Jean Carlos Delgado<br/>
+    Antonio Ercolani<br/>
+    Fitzberth Powell<br/>
+    Isaac Tretta<br/>
+</p>
