--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/Index.cshtml
@@ -31,5 +31,5 @@
 </div>
 
 <div>
-    @Html.ActionLink("Grupo B", "Index", "Preguntas")
+    @Html.ActionLink("Grupo B", "Index", "Preguntas1")
     </div>
