--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Preguntas1/Delete.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Preguntas1/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Opiniometro_WebApp.Models.Pregunta
+﻿@model Opiniometro_WebApp.Models.Preguntas
 
 @{
     ViewBag.Title = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Pregunta</h4>
+    <h4>Preguntas</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
