--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Preguntas1/Details.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Preguntas1/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Opiniometro_WebApp.Models.Pregunta
+﻿@model Opiniometro_WebApp.Models.Preguntas
 
 @{
     ViewBag.Title = "Details";
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Pregunta</h4>
+    <h4>Preguntas</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
