Cambios en el about para agregar la informacion del grupo

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/About.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/About.cshtml
@@ -4,4 +4,10 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>JOFFI PROJECTS<br />
+    Javier Nunez <br/>
+    Oscar Arroyo <br />
+    Felipe Carmona<br />
+    Fabian Rojas <br />
+    Ivania Calderon<br />
+    </p>
