cambio en el index comentando el edit, detail y delete

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Preguntas1/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Preguntas1/Index.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Banco de Preguntas</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @*@Html.ActionLink("Create New", "Create")*@
 </p>
 <table class="table">
     <tr>
@@ -40,11 +40,11 @@
         <td>
             @Html.DisplayFor(modelItem => item.Categoria)
         </td>
-        <td>
+        @*<td>
             @Html.ActionLink("Edit", "Edit", new { id = item.Planteamiento }) |
             @Html.ActionLink("Details", "Details", new { id = item.Planteamiento }) |
             @Html.ActionLink("Delete", "Delete", new { id = item.Planteamiento })
-        </td>
+        </td>*@
     </tr>
 }
 
