Arreglo de consistencia en el about.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/About.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/About.cshtml
@@ -7,30 +7,32 @@
 <div>
     <h4><b>The Strategists</b></h4>
     <ul>
-        <li>Daniel Ramírez - B45675</li>
-        <li>José Andrés Mejías - B54275</li>
-        <li>Allen Ramírez - B25448</li>
-        <li>Felipe Almanza - B60259</li>
-        <li>Sergio Fernández - B22539</li>
-        <li>Aldo Weil Hernández - B47741</li>
-        <li>Sebastían Vargas Soto - B47431</li>
+        <li>Daniel Ramírez</li>
+        <li>José Andrés Mejías</li>
+        <li>Allen Ramírez</li>
+        <li>Felipe Almanza</li>
+        <li>Sergio Fernández</li>
+        <li>Aldo Weil Hernández</li>
+        <li>Sebastían Vargas Soto</li>
     </ul>
 </div>
 <!-- Equipo A -->
-<h4>JJAPH Inventions</h4>
-<p>
-    Jennifer Villalobos<br />
-    Jose Pablo Salas<br />
-    Hernán Torres<br />
-    Adrián Vargas<br />
-    Jim D. Zúñiga
-</p>
-@*Grupo D*@
-<p>
-    C.X. Solutions:<br/>
-    Franklin Ramírez<br/>
-    Jean Carlos Delgado<br/>
-    Antonio Ercolani<br/>
-    Fitzberth Powell<br/>
-    Isaac Tretta<br/>
-</p>
+<h4><b>JJAPH Inventions</b></h4>
+<ul>
+    <li>Jennifer Villalobos</li>
+    <li>Jose Pablo Salas</li>
+    <li>Hernán Torres</li>
+    <li>Adrián Vargas</li>
+    <li>Jim D. Zúñiga</li>
+</ul>
+
+<h4><b>C.X. Solutions</b></h4>
+<ul>
+    <li>Franklin Ramírez</li>
+    <li>Jean Carlos Delgado</li>
+    <li>Antonio Ercolani</li>
+    <li>Fitzberth Powell</li>
+    <li>Isaac Tretta</li>
+</ul>
+
+<h4><b>JOFFI projects</b></h4>
