--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/Index.cshtml
@@ -3,13 +3,13 @@
     ViewBag.Title = "Index";
 }
 
-
+<br />
 <div>
     <h4>@Html.ActionLink("Lista de Cursos", "Index", "Curso")</h4>
 </div>
 
 <h4><a href="/TheStrategists">The Strategists</a></h4>
 <div>
-    @Html.ActionLink("Lista de Secciones de Formulario", "Index", "Seccion")<br />
+    <h4>@Html.ActionLink("Lista de Secciones de Formulario", "Index", "Seccion")</h4>
 </div>
 
