Arreglo de consistencia en el home.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     <h4>@Html.ActionLink("Lista de Cursos", "Index", "Curso")</h4>
 </div>
 
-<h4><a href="/TheStrategists">The Strategists</a></h4>
+<h4><a href="/TheStrategists">Estudiantes</a></h4>
 <div>
     <h4>@Html.ActionLink("Lista de Secciones de Formulario", "Index", "Seccion")</h4>
 </div>
