--- a/Opiniometro_WebApp/Views/Auth/Login.cshtml
+++ b/Opiniometro_WebApp/Views/Auth/Login.cshtml
@@ -6,7 +6,7 @@
 
 <br />
 
-@using (Html.BeginForm("Login", "Login", FormMethod.Post))
+@using (Html.BeginForm("Login", "Auth", FormMethod.Post))
 {
     <table>
         <tr>
