--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario_Respuesta/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario_Respuesta/Index.cshtml
@@ -1,14 +1,11 @@
 ﻿@model IEnumerable<Opiniometro_WebApp.Models.Formulario_Respuesta>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Formulario Responde";
 }
 
-<h2>Index</h2>
+<h2>Formulario Responde</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
@@ -17,17 +14,16 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Completado)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Completado)
+            </td>
+            <td>
+                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ })
+            </td>
+        </tr>
+    }
 
 </table>
