--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/Index.cshtml
@@ -4,3 +4,10 @@
 
 <h1>Home</h1>
 
+<body>
+    <div class="container">
+        <p>
+            <a href="Add.csv" class="btn btn-success">Agregar archivo</a>
+        </p>
+    </div>
+</body>
