--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Auth/Login.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Auth/Login.cshtml
@@ -4,28 +4,41 @@
     ViewBag.Title = "Index";
 }
 
-<br />
-
-@using (Html.BeginForm("Login", "Auth", FormMethod.Post))
-{
-<div class="container login-container" align="center">
-
-    <div class="login-form-1">
-        <h2>Opiniómetro@UCR</h2>
-        <form>
-            <div class="form-group">
-                <input type="email" class="form-control" placeholder="Correo institucional" name="Correo" />
+<div align="center">
+    <h1>Opiniómetro@UCR</h1>
+    @using (Html.BeginForm("Login", "Auth", FormMethod.Post))
+    {
+        <div class="login-container">
+            <div class="row">
+                <div class="col-md-4 col-md-offset-4">
+                    <div class="panel panel-default">
+                        <h3>Ingreso al Sistema</h3>
+                        <div class="panel-body">
+                            <div>
+                                <form>
+                                    <div class="input-group" style="width:250px">
+                                        <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                                        <input type="email" class="form-control" name="Correo" placeholder="Correo institucional">
+                                    </div>
+                                    <br />
+                                    <div class="input-group" style="width:250px">
+                                        <span class="input-group-addon"><i class="glyphicon glyphicon-asterisk"></i></span>
+                                        <input type="password" class="form-control" name="Contrasenna" placeholder="Contraseña">
+                                    </div>
+                                    <br />
+                                    <div class="form-group">
+                                        <input type="submit" value="Acceder" name="Acceder" />
+                                    </div>
+                                    
+                                    <div class="form-group">
+                                        @Html.ActionLink("¿Olvidó su contraseña?", "Recuperar")
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <input type="password" class="form-control" placeholder="Contraseña" name="Contrasenna" />
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Acceder" name="Acceder" />
-            </div>
-            <div class="form-group">
-                @Html.ActionLink("¿Olvidó su contraseña?", "Recuperar")
-            </div>
-        </form>
-    </div>
+        </div>
+    }
 </div>
-}
