--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Auth/Recuperar.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Auth/Recuperar.cshtml
@@ -2,6 +2,32 @@
 @{
     ViewBag.Title = "Recuperar";
 }
-
-<h2>Recuperar</h2>
-
+<div align="center">
+    <h1>Opiniómetro@UCR</h1>
+    @using (Html.BeginForm("EnviarCorreo", "Auth", FormMethod.Post))
+    {
+        <div class="login-container">
+            <div class="row">
+                <div class="col-md-4 col-md-offset-4">
+                    <div class="panel panel-default">
+                        <h3>Recuperar contraseña</h3>
+                        <div class="panel-body">
+                            <div>
+                                <form>
+                                    <div class="input-group" style="width:250px">
+                                        <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                                        <input type="email" class="form-control" name="Correo" placeholder="Correo institucional">
+                                    </div>
+                                    <br />
+                                    <div class="form-group">
+                                        <input type="submit" value="Enviar Correo" name="Enviar" />
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    }
+</div>
