--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Index.cshtml
@@ -21,7 +21,7 @@
             @Html.DisplayNameFor(model => model.TieneObservacion)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.SeleccionUnica.ItemID)
+            @Html.DisplayNameFor(model => model.Seleccion_Unica.ItemId)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Texto_Libre.ItemId)
@@ -41,7 +41,7 @@
             @Html.DisplayFor(modelItem => item.TieneObservacion)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.SeleccionUnica.ItemID)
+            @Html.DisplayFor(modelItem => item.Seleccion_Unica.ItemId)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Texto_Libre.ItemId)
