--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
+
+    <!--Se necesita esto para usar estilos-propios.css-->
+    @RenderSection("Styles", false)
+
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
