Vista para página de asignación de formularios con contrlador y modelo vacío creada.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Home/Index.cshtml
@@ -10,6 +10,7 @@
     @Html.ActionLink("Preguntas", "Index", "Item")<br />
     @Html.ActionLink("Selecion Unica", "Index", "SeleccionUnica")<br /> @*Esto no cumple DoD, necesitamos editarlo ASAP*@
     @Html.ActionLink("Texto Libre", "Index", "Texto_Libre")<br />
-    @Html.ActionLink("Lista de Conformados", "Index", "Conformado_Item_Sec_Form")
+    @Html.ActionLink("Lista de Conformados", "Index", "Conformado_Item_Sec_Form")<br /><br />
+    @Html.ActionLink("Asignar un formulario", "Index", "AsignarFormularios")
 </div>
 
