--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Auth/Login.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Auth/Login.cshtml
@@ -3,9 +3,26 @@
 @{
     ViewBag.Title = "Index";
 }
+
 <!--Para usar la clase login-error del archivo estilos-propios.css-->
 <link href="@Url.Content("~/Content/estilos-propios.css")" rel="stylesheet" type="text/css" />
 
+
+<!--Barra-->
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <div style="width: 860px; overflow: hidden" text-align="center">
+                <a class="navbar-brand" href="/">
+                    <img src="~/Content/firma-ucr-c.svg" width="1700">
+                </a>
+            </div>
+        </div>
+    </div>
+</nav>
+
+<br /> <br /> <br /> <br /> <br /> <br />
+<!--Login-->
 <div align="center">
     <h1>Opiniómetro@UCR</h1>
     @using (Html.BeginForm("Login", "Auth", FormMethod.Post))
