--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Auth/Login.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Auth/Login.cshtml
@@ -9,19 +9,8 @@
 
 
 <!--Barra-->
-<nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <div style="width: 860px; overflow: hidden" text-align="center">
-                <a class="navbar-brand" href="/">
-                    <img src="~/Content/firma-ucr-c.svg" width="1700">
-                </a>
-            </div>
-        </div>
-    </div>
-</nav>
+@Html.Partial("~\\Views\\Shared\\Auth\\BarraInicio.cshtml")
 
-<br /> <br /> <br /> <br /> <br /> <br />
 <!--Login-->
 <div align="center">
     <h1>Opiniómetro@UCR</h1>
