--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Auth/Login.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Auth/Login.cshtml
@@ -1,54 +1,72 @@
-﻿@model Opiniometro_WebApp.Models.Usuario
+﻿<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@ViewBag.Title - My ASP.NET Application</title>
+    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/modernizr")
+</head>
+<body>
+    <div class="container body-content">
 
-@{
-    ViewBag.Title = "Index";
-}
+        @model Opiniometro_WebApp.Models.Usuario
 
-<!--Para usar la clase login-error del archivo estilos-propios.css-->
-<link href="@Url.Content("~/Content/estilos-propios.css")" rel="stylesheet" type="text/css" />
+        @{
+            ViewBag.Title = "Index";
+        }
+
+        <!--Para usar la clase login-error del archivo estilos-propios.css-->
+        <link href="@Url.Content("~/Content/estilos-propios.css")" rel="stylesheet" type="text/css" />
 
 
-<!--Barra-->
-@Html.Partial("~\\Views\\Shared\\Auth\\BarraInicio.cshtml")
+        <!--Barra-->
+        @Html.Partial("~\\Views\\Shared\\Auth\\BarraInicio.cshtml")
 
-<!--Login-->
-<div align="center">
-    <h1>Opiniómetro@UCR</h1>
-    @using (Html.BeginForm("Login", "Auth", FormMethod.Post))
-    {
-        <div class="login-container">
-            <div class="row">
-                <div class="col-md-4 col-md-offset-4">
-                    <div class="panel panel-default">
-                        <h3>Ingreso al Sistema</h3>
-                        <div class="panel-body">
-                            <div>
-                                <form>
-                                    <div class="input-group" style="width:250px">
-                                        <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-                                        <input name="CorreoInstitucional" type="email" class="form-control" placeholder="Correo institucional">
+        <!--Login-->
+        <div align="center">
+            <h1>Opiniómetro@UCR</h1>
+            @using (Html.BeginForm("Login", "Auth", FormMethod.Post))
+            {
+                <div class="login-container">
+                    <div class="row">
+                        <div class="col-md-4 col-md-offset-4">
+                            <div class="panel panel-default">
+                                <h3>Ingreso al Sistema</h3>
+                                <div class="panel-body">
+                                    <div>
+                                        <form>
+                                            <div class="input-group" style="width:250px">
+                                                <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                                                <input name="CorreoInstitucional" type="email" class="form-control" placeholder="Correo institucional">
+                                            </div>
+                                            <br />
+                                            <div class="input-group" style="width:250px">
+                                                <span class="input-group-addon"><i class="glyphicon glyphicon-asterisk"></i></span>
+                                                <input type="password" class="form-control" name="Contrasena" placeholder="Contraseña">
+                                            </div>
+                                            <br />
+                                            <div class="form-group">
+                                                <input type="submit" value="Acceder" name="Acceder" />
+                                            </div>
+
+                                            <div class="form-group">
+                                                @Html.ActionLink("¿Olvidó su contraseña?", "Recuperar")
+                                            </div>
+                                            @Html.ValidationSummary(true, "Correo o contraseña inválidos", htmlAttributes: new { @class = "login-error" })
+                                        </form>
                                     </div>
-                                    <br />
-                                    <div class="input-group" style="width:250px">
-                                        <span class="input-group-addon"><i class="glyphicon glyphicon-asterisk"></i></span>
-                                        <input type="password" class="form-control" name="Contrasena" placeholder="Contraseña">
-                                    </div>
-                                    <br />
-                                    <div class="form-group">
-                                        <input type="submit" value="Acceder" name="Acceder" />
-                                    </div>
-
-                                    <div class="form-group">
-                                        @Html.ActionLink("¿Olvidó su contraseña?", "Recuperar")
-                                    </div>
-                                    @Html.ValidationSummary(true, "Correo o contraseña inválidos", htmlAttributes: new { @class = "login-error" })
-                                </form>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
 
-    }
-</div>
+            }
+        </div>
+    </div>
+
+        @Scripts.Render("~/bundles/jquery")
+        @Scripts.Render("~/bundles/bootstrap")
+</body>
+</html>
