--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Auth/Login.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Auth/Login.cshtml
@@ -19,9 +19,8 @@
         <!--Para usar la clase login-error del archivo estilos-propios.css-->
         <link href="@Url.Content("~/Content/estilos-propios.css")" rel="stylesheet" type="text/css" />
 
-
         <!--Barra-->
-        @Html.Partial("~\\Views\\Shared\\Auth\\BarraInicio.cshtml")
+        @Html.Partial("~\\Views\\Shared\\Auth\\BarraLogin.cshtml")
 
         <!--Login-->
         <div align="center">
