--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Auth/Recuperar.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Auth/Recuperar.cshtml
@@ -14,7 +14,7 @@
         }
 
         <!--Barra-->
-        @Html.Partial("~\\Views\\Shared\\Auth\\BarraInicio.cshtml")
+        @Html.Partial("~\\Views\\Shared\\Auth\\BarraLogin.cshtml")
 
         <div align="center">
             <h1>Opiniómetro@UCR</h1>
