--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/Auth/BarraLogin.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/Auth/BarraLogin.cshtml
@@ -1,8 +1,8 @@
-﻿<nav class="navbar navbar-default-opiniometro-inicio navbar-fixed-top">
+﻿<nav class="navbar navbar-default-barra-login navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
             <div style="width: 860px; overflow: hidden" text-align="center">
-                <a class="navbar-brand" href="/">
+                <a class="navbar-brand-barra-login" href="/">
                     <img src="~/Content/firma-ucr-c.svg" width="1700">
                 </a>
             </div>
