Actualizado modelo de Asignación de Formularios. Nombre cambiado por uno más significativo.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Opiniometro_WebApp.Models.AsignarCursosModel
+﻿@model Opiniometro_WebApp.Models.AsignarFormulariosModel
 
 @{
     Layout = null;
