--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario_Respuesta/Edit.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario_Respuesta/Edit.cshtml
@@ -23,7 +23,7 @@
 
         @Html.HiddenFor(model => model.CedulaProfesor)
 
-        @Html.HiddenFor(model => model.AñoGrupo)
+        @Html.HiddenFor(model => model.AnnoGrupo)
 
         @Html.HiddenFor(model => model.SemestreGrupo)
 
