--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario_Respuesta/Details.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario_Respuesta/Details.cshtml
@@ -18,6 +18,38 @@
             @Html.DisplayFor(model => model.Completado)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Formulario.Nombre)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Formulario.Nombre)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Grupo.SiglaCurso)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Grupo.SiglaCurso)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Persona.Nombre)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Persona.Nombre)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Profesor.CedulaProfesor)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Profesor.CedulaProfesor)
+        </dd>
+
     </dl>
 </div>
 <p>
