--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario_Respuesta/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Formulario_Respuesta/Index.cshtml
@@ -14,6 +14,18 @@
         <th>
             @Html.DisplayNameFor(model => model.Completado)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Formulario.Nombre)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Grupo.SiglaCurso)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Persona.Nombre)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Profesor.CedulaProfesor)
+        </th>
         <th></th>
     </tr>
 
@@ -21,6 +33,18 @@
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.Completado)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Formulario.Nombre)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Grupo.SiglaCurso)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Persona.Nombre)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Profesor.CedulaProfesor)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
